--- a/index-theater.html
+++ b/index-theater.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>OKS Ticket Booking</title>
+    <title>FIDEI Ticket Booking</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- For mobile responsiveness -->
     <style>
         /* CSS Styles */
