fix coloring local

--- a/local.html
+++ b/local.html
@@ -1135,8 +1135,8 @@
         function getSeatColor(seatClass) {
             const colorMap = {
                 'vvip': 'MERAH',    // Red
-                'special': 'UNGU',  // Purple
-                'regular': 'HIJAU', // Green
+                'special': 'HIJAU',  // Purple
+                'regular': 'BIRU', // Green
                 'backseat': 'KUNING', // Yellow
                 'imam': 'ORANGE'
             };
