--- a/index-theater.html
+++ b/index-theater.html
@@ -632,7 +632,8 @@
                     }
                 } else if (vvipRows.includes(rowLetter)) {
                     if (seatNumber >= 6 && seatNumber <= 25) {
-                        seatClass = 'vvip';
+                        // seatClass = 'vvip';
+                        seatClass = 'backseat';
                     } else {
                         seatClass = 'regular';
                     }
