change I6 to Blue

--- a/index-theater.html
+++ b/index-theater.html
@@ -639,7 +639,7 @@
                     }
                 } else if (specialRows.includes(rowLetter)) {
                     if (seatNumber >= 6 && seatNumber <= 25) {
-                        seatClass = 'backseat';
+                        seatClass = 'regular';
                     } else {
                         seatClass = 'regular';
                     }
