--- a/index-theater.html
+++ b/index-theater.html
@@ -645,7 +645,7 @@
                     }
                 } else if (lastRow.includes(rowLetter)) {
                     if (seatNumber >= 6 && seatNumber <= 25) {
-                        seatClass = 'special';
+                        seatClass = 'regular';
                     } else {
                         seatClass = 'regular';
                     }
