--- a/index-theater.html
+++ b/index-theater.html
@@ -635,7 +635,7 @@
                         seatClass = 'vvip';
                         //seatClass = 'backseat';
                     } else {
-                        seatClass = 'backseat';
+                        seatClass = 'regular';
                     }
                 } else if (specialRows.includes(rowLetter)) {
                     if (seatNumber >= 6 && seatNumber <= 25) {
